Colaboratory を使用して作成しました

--- a/kaggle03bool.ipynb
+++ b/kaggle03bool.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle03bool.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPBwicehTdwDXqDuQGW1MrI",
+      "authorship_tag": "ABX9TyP8u/XdojvYvfNgAK1yVnmv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -441,18 +441,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ii0zA2kj7wsm",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "# いまここ\n",
-        "\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "mFIE3xODPi9u",
@@ -603,16 +591,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BN8mO9VKpxqj",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "8RuXM6Zrp5FS",
         "colab_type": "text"
       },
@@ -673,7 +651,7 @@
         "print(concise_is_negative(-1))\n",
         "print(concise_is_negative(0))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -751,7 +729,7 @@
         "print (wants_plain_hotdog(ketchup, mustard, onion))\n",
         "print (exactly_one_sauce(ketchup, mustard, onion))"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,44 +748,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mu6R6fpefwZX",
-        "colab_type": "text"
-      },
-      "source": [
-        "The boolean variables ketchup, mustard and onion represent whether a customer wants a particular topping on their hot dog. We want to implement a number of boolean functions that correspond to some yes-or-no questions about the customer's order. For example:\n",
-        "```\n",
-        "def onionless(ketchup, mustard, onion):\n",
-        "    \"\"\"Return whether the customer doesn't want onions.\n",
-        "    \"\"\"\n",
-        "    return not onion\n",
-        "```\n",
-        "For each of the remaining functions, fill in the body to match the English description in the docstring.\n",
-        "```\n",
-        "def wants_all_toppings(ketchup, mustard, onion):\n",
-        "    \"\"\"Return whether the customer wants \"the works\" (all 3 toppings)\n",
-        "    \"\"\"\n",
-        "    pass\n",
-        "​```\n",
-        "```\n",
-        "def wants_plain_hotdog(ketchup, mustard, onion):\n",
-        "    \"\"\"Return whether the customer wants a plain hot dog with no toppings.\n",
-        "    \"\"\"\n",
-        "    pass\n",
-        "​```\n",
-        "\n",
-        "```\n",
-        "def exactly_one_sauce(ketchup, mustard, onion):\n",
-        "    \"\"\"Return whether the customer wants either ketchup or mustard, but not both.\n",
-        "    (You may be familiar with this operation under the name \"exclusive or\")\n",
-        "    \"\"\"\n",
-        "    pass\n",
-        "\n",
-        "```\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "OT9WynwoqXss",
         "colab_type": "text"
       },
@@ -815,36 +755,71 @@
         "\n",
         "### 問題 6\n",
         "\n",
+        "`bool()`は引数が0ならばFalseでそれ以外はTrueを返す。\n",
         "\n",
-        "6. 🌶️\n",
-        "We’ve seen that calling bool() on an integer returns False if it’s equal to 0 and True otherwise. What happens if we call int() on a bool? Try it out in the notebook cell below.\n",
-        "\n",
-        "Can you take advantage of this to write a succinct function that corresponds to the English sentence \"does the customer want exactly one topping?\"?\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "`int()`の引数にブール型を入れた場合どうなるか、実験し、その結果を用いて、お客がトッピングを1つだけ選ぶ、という場合の関数を書く。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v83oa7gl0Atn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "c5575313-2323-46a7-f32d-28134f5725d1"
+      },
+      "source": [
+        "print (int(True))\n",
+        "print (int(False))"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i_11jVDpz37V",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5f9fce7f-4319-4371-903d-46456f178b5a"
+      },
+      "source": [
         "def exactly_one_topping(ketchup, mustard, onion):\n",
         "    \"\"\"Return whether the customer wants exactly one of the three available toppings\n",
         "    on their hot dog.\n",
         "    \"\"\"\n",
-        "    pass\n",
-        "​\n",
-        "# Check your answer\n",
-        "q6.check()\n",
+        "    return (int(ketchup) + int(mustard) + int(onion)) == 1\n",
         "\n",
+        "ketchup = True\n",
+        "mustard = True\n",
+        "onion = True\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "#q6.hint()\n",
-        "#q6.solution()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "print (exactly_one_topping(ketchup, mustard, onion))"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -856,21 +831,19 @@
       "source": [
         "### 問題 7\n",
         "\n",
-        "7. 🌶️ (Optional)\n",
-        "In this problem we'll be working with a simplified version of blackjack (aka twenty-one). In this version there is one player (who you'll control) and a dealer. Play proceeds as follows:\n",
+        "この問題では単純化したブラックジャック(別名トゥエンティ・ワン)を使う。プレーヤー1人とディーラー1人でプレイするものとする。\n",
         "\n",
-        "The player is dealt two face-up cards. The dealer is dealt one face-up card.\n",
-        "The player may ask to be dealt another card ('hit') as many times as they wish. If the sum of their cards exceeds 21, they lose the round immediately.\n",
-        "The dealer then deals additional cards to himself until either:\n",
-        "the sum of the dealer's cards exceeds 21, in which case the player wins the round\n",
-        "the sum of the dealer's cards is greater than or equal to 17. If the player's total is greater than the dealer's, the player wins. Otherwise, the dealer wins (even in case of a tie).\n",
-        "When calculating the sum of cards, Jack, Queen, and King count for 10. Aces can count as 1 or 11 (when referring to a player's \"total\" above, we mean the largest total that can be made without exceeding 21. So e.g. A+8 = 19, A+8+8 = 17)\n",
+        "プレーヤーは何度でも次のカードを要求(`hit`)できる。手持ちのカードが21を超えたら、その時点で負けとなる。\n",
         "\n",
-        "For this problem, you'll write a function representing the player's decision-making strategy in this game. We've provided a very unintelligent implementation below:\n",
+        "ディーラーはカードを自分で引いて:\n",
+        "ディーラーのカード合計が21を超えたら、プレーヤーの勝ち。\n",
+        "ディーラーのカード合計が17以上ならば、プレーヤーがディーラーより大きかった場合だけプレーヤーの勝ち。タイの場合でもディーラーの勝ち。\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
+        "合計の際、ジャック、クイーン、キングは10とする。エースは1または11を合計が21を超えないように選べる。例えば、\n",
+        "```\n",
+        "A+8 = 19, A+8+8 = 17\n",
+        "```\n",
+        "この問題では、プレーヤーが`hit`するかどうかの戦略を決定するプログラムを作る。最初の戦略は次のとおり。\n",
         "\n",
         "```\n",
         "def should_hit(dealer_total, player_total, player_low_aces, player_high_aces):\n",
@@ -881,65 +854,73 @@
         "    For example, if the player's hand is {A, A, A, 7}, we will count it as 11 + 1 + 1 + 7,\n",
         "    and therefore set player_total=20, player_low_aces=2, player_high_aces=1.\n",
         "    \"\"\"\n",
-        "    return False\n",
-        "```\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "This very conservative agent always sticks with the hand of two cards that they're dealt.\n",
-        "\n",
-        "We'll be simulating games between your player agent and our own dealer agent by calling your function.\n",
-        "\n",
-        "Try running the function below to see an example of a simulated game:\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "q7.simulate_one_game()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "The real test of your agent's mettle is their average win rate over many games. Try calling the function below to simulate 50000 games of blackjack (it may take a couple seconds):\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "q7.simulate(n_games=50000)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Our dumb agent that completely ignores the game state still manages to win shockingly often!\n",
-        "\n",
-        "Try adding some more smarts to the should_hit function and see how it affects the results.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "```\n",
-        "def should_hit(dealer_total, player_total, player_low_aces, player_high_aces):\n",
-        "    \"\"\"Return True if the player should hit (request another card) given the current game\n",
-        "    state, or False if the player should stay.\n",
-        "    When calculating a hand's total value, we count aces as \"high\" (with value 11) if doing so\n",
-        "    doesn't bring the total above 21, otherwise we count them as low (with value 1). \n",
-        "    For example, if the player's hand is {A, A, A, 7}, we will count it as 11 + 1 + 1 + 7,\n",
-        "    and therefore set player_total=20, player_low_aces=2, player_high_aces=1.\n",
-        "    \"\"\"\n",
-        "    return False\n",
-        "​\n",
-        "q7.simulate(n_games=50000)\n",
-        "\n",
-        "```"
+        "    return False\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xl31t9rX3vH-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def should_hit(dealer_total, player_total, player_low_aces, player_high_aces):\n",
+        "    \"\"\"Return True if the player should hit (request another card) given the current game\n",
+        "    state, or False if the player should stay.\n",
+        "    When calculating a hand's total value, we count aces as \"high\" (with value 11) if doing so\n",
+        "    doesn't bring the total above 21, otherwise we count them as low (with value 1). \n",
+        "    For example, if the player's hand is {A, A, A, 7}, we will count it as 11 + 1 + 1 + 7,\n",
+        "    and therefore set player_total=20, player_low_aces=2, player_high_aces=1.\n",
+        "    \"\"\"\n",
+        "    if player_total <= 13 :\n",
+        "        return True\n",
+        "    else :\n",
+        "        return False"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j9lc0hSH06b5",
+        "colab_type": "text"
+      },
+      "source": [
+        "この保守的な戦略では、プレーヤは常に配られた2枚だけを根拠に判断する。\n",
+        "\n",
+        "ゲームをシミュレートしてみると、この単純な戦略だけで、ゲームの状況を無視していてもそこそこ勝てることがわかる。\n",
+        "\n",
+        "プレーヤーの勝ち率が上がるよう工夫してみよう。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SRfjwbpm5Pod",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def should_hit(dealer_total, player_total, player_low_aces, player_high_aces):\n",
+        "    \"\"\"Return True if the player should hit (request another card) given the current game\n",
+        "    state, or False if the player should stay.\n",
+        "    When calculating a hand's total value, we count aces as \"high\" (with value 11) if doing so\n",
+        "    doesn't bring the total above 21, otherwise we count them as low (with value 1). \n",
+        "    For example, if the player's hand is {A, A, A, 7}, we will count it as 11 + 1 + 1 + 7,\n",
+        "    and therefore set player_total=20, player_low_aces=2, player_high_aces=1.\n",
+        "    \"\"\"\n",
+        "    if player_total <= 13 :\n",
+        "        return True\n",
+        "    elif (player_high_aces == 1) and (player_total <= 17):\n",
+        "        return True\n",
+        "    else :\n",
+        "        return False"
+      ],
+      "execution_count": 48,
+      "outputs": []
     }
   ]
 }
