Colaboratory を使用して作成しました

--- a/kaggle04list.ipynb
+++ b/kaggle04list.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle04list.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPUrspR8ZDMyLkayoebWSK6",
+      "authorship_tag": "ABX9TyN4YXGC9AfdCX4AMa87YYRZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1524,7 +1524,7 @@
         "t = (1, 2, 3)\n",
         "t"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1555,7 +1555,7 @@
         "t = 1, 2, 3 # t = (1, 2, 3) と同じ\n",
         "t"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1613,7 +1613,7 @@
         " \n",
         "x.as_integer_ratio()\n"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1654,7 +1654,7 @@
         "numerator, denominator = x.as_integer_ratio()\n",
         "print(numerator / denominator)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1692,7 +1692,7 @@
         "a, b = b, a\n",
         "print(a, b)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1757,7 +1757,16 @@
         "    element, return None.\n",
         "    \"\"\"\n",
         "    pass\n",
-        "```\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hz8Xha1alYUP",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "### 問題 2\n",
         "\n",
@@ -1769,7 +1778,16 @@
         "    from the last listed team\n",
         "    \"\"\"\n",
         "    pass\n",
-        "```\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "alOefQzplask",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "### 問題 3\n",
         "\n",
@@ -1785,7 +1803,16 @@
         "    [\"Luigi\", \"Bowser\", \"Mario\"]\n",
         "    \"\"\"\n",
         "    pass\n",
-        "```\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2oGgi8mAlc4Y",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "### 問題 4\n",
         "\n",
@@ -1801,7 +1828,16 @@
         "# first being the length of a, the second being the length of b and so on.\n",
         "lengths = []\n",
         "```\n",
-        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EiR5M2tGley0",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "### 問題 5\n",
         "\n",
