Colaboratory を使用して作成しました

--- a/kaggle04list.ipynb
+++ b/kaggle04list.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle04list.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN4YXGC9AfdCX4AMa87YYRZ",
+      "authorship_tag": "ABX9TyOfZ7zSwsNenKAFJCAbL6gF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1486,16 +1486,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "A2rBdN0OMsPe",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1I2TbieuBFBR",
         "colab_type": "text"
       },
@@ -1728,36 +1718,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qF1kKqguDLrs",
+        "id": "93zf8KJPjpnv",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "d23e9f57-4d43-4626-cea5-e2b8aa00b200"
       },
       "source": [
         "def select_second(L):\n",
-        "    \"\"\"Return the second element of the given list. If the list has no second\n",
-        "    element, return None.\n",
-        "    \"\"\"\n",
-        "    pass"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "sSD7r0PaDIqu",
-        "colab_type": "text"
-      },
-      "source": [
+        "    \"\"\"Return the second element of the given list. If the list has no second element, return None.\"\"\"\n",
+        "    if len(L) < 2 :\n",
+        "        return None\n",
+        "    else :\n",
+        "        return L[1]\n",
         "\n",
-        "Complete the function below according to its docstring.\n",
-        "```\n",
-        "def select_second(L):\n",
-        "    \"\"\"Return the second element of the given list. If the list has no second\n",
-        "    element, return None.\n",
-        "    \"\"\"\n",
-        "    pass\n",
-        "```\n"
+        "L = [0, 1, 2, 3]\n",
+        "print(select_second(L))\n",
+        "print(select_second([]))\n",
+        "print(select_second([1]))\n",
+        "print(select_second([1,2]))\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "None\n",
+            "None\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1767,18 +1761,44 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
         "### 問題 2\n",
         "\n",
-        "You are analyzing sports teams.  Members of each team are stored in a list. The Coach is the first name in the list, the captain is the second name in the list, and other players are listed after that. \n",
-        "These lists are stored in another list, which starts with the best team and proceeds through the list to the worst team last.  Complete the function below to select the **captain** of the worst team.\n",
-        "```\n",
+        "スポーツチームの問題。それぞれのチームのリストでコーチの名前がリストの最初にあり、キャプテンが2番目、それ以降はチームのメンバー。このチームのリストがリストになっていて、最初がベストチーム、で最後がワーストチームの順に並んでいる。\n",
+        "\n",
+        "ワーストチームのキャプテンを選ぶプログラムを作る。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b7OGql1ImptF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "119db415-5ce0-4fc8-f4a9-43a356e6405b"
+      },
+      "source": [
         "def losing_team_captain(teams):\n",
         "    \"\"\"Given a list of teams, where each team is a list of names, return the 2nd player (captain)\n",
         "    from the last listed team\n",
         "    \"\"\"\n",
-        "    pass\n",
-        "```\n"
+        "    return teams[-1][1]\n",
+        "\n",
+        "teams = [[\"bob\", \"mark\", \"john\"], [\"peter\", \"matthew\", \"willy\"]]\n",
+        "\n",
+        "print(losing_team_captain(teams))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "matthew\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1788,11 +1808,25 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
         "### 問題 3\n",
         "\n",
-        "The next iteration of Mario Kart will feature an extra-infuriating new item, the *Purple Shell*. When used, it warps the last place racer into first place and the first place racer into last place. Complete the function below to implement the Purple Shell's effect.\n",
-        "```\n",
+        "マリオ・カートゲームの次回作では、*Purple Shell*というアイテムが装備され、それを使うとビリのレーサーとトップのレーサーが入れ替わるというとんでもないことが起きる。\n",
+        "\n",
+        "次のプログラムを完成させ、Purple Shellの効果を実装する。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MFl70KA4nh7N",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "37fe3234-a8ff-4c77-9537-51e989bca3cc"
+      },
+      "source": [
         "def purple_shell(racers):\n",
         "    \"\"\"Given a list of racers, set the first place racer (at the front of the list) to last\n",
         "    place and vice versa.\n",
@@ -1802,8 +1836,37 @@
         "    >>> r\n",
         "    [\"Luigi\", \"Bowser\", \"Mario\"]\n",
         "    \"\"\"\n",
-        "    pass\n",
-        "```\n"
+        "    racers[0], racers[-1] = racers[-1], racers[0]\n",
+        "    return racers\n",
+        "\n",
+        "r = [\"Mario\", \"Bowser\", \"Luigi\"]\n",
+        "purple_shell(r)\n",
+        "r"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Luigi', 'Bowser', 'Mario']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jO64U85ypn5v",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -1813,7 +1876,6 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
         "### 問題 4\n",
         "\n",
         "What are the lengths of the following lists? Fill in the variable `lengths` with your predictions. (Try to make a prediction for each list *without* just calling `len()` on it.)\n",
