--- a/kaggle05loop.ipynb
+++ b/kaggle05loop.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle05loop.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMOzBcnQLoA+EGBeG3fpejk",
+      "authorship_tag": "ABX9TyNuLnApZtyij8LfLih2NA/K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
         "for planet in planets:\n",
         "    print(planet, end=' ') # print all on same line"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "\n",
         "product"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +187,7 @@
         "    if char.isupper():\n",
         "        print(char, end='')      "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "for i in range(5):\n",
         "    print(\"Doing important work. i =\", i)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,10 +250,9 @@
         "colab_type": "text"
       },
       "source": [
-        "```\n",
         "### while ループ\n",
         "\n",
-        "`while`ループは条件を満たすまで繰り返す。\n"
+        "`while`ループは条件を満たしている間、繰り返す。\n"
       ]
     },
     {
@@ -273,7 +272,7 @@
         "    print(i, end=' ')\n",
         "    i += 1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,10 +300,17 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "The argument of the while loop is evaluated as a boolean statement, and the loop is executed until the statement evaluates to False.\n",
-        "\n",
-        "List comprehensions\n",
+        "`while`ループの引数はブール式として評価され、ループは式が`False`になるまで繰り返される。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yBJfdR4648fo",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### List 内包表記\n",
         "List comprehensions are one of Python's most beloved and unique features. The easiest way to understand them is probably to just look at a few examples:\n",
         "```\n",
         "squares = [n**2 for n in range(10)]\n",
