Colaboratory を使用して作成しました

--- a/kaggle05loop.ipynb
+++ b/kaggle05loop.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle05loop.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqa+Khmqj3kW2kxUq76dmG",
+      "authorship_tag": "ABX9TyPJohsn/+6kxbxIL5P13OPh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -471,23 +471,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6idv3BSaXd0y",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "V1gJ6uJ1glI2",
         "colab_type": "text"
       },
       "source": [
+        "リスト内包表記の左部分はループ変数を含む必要はないが、たいていは含んでいる。\n",
         "\n",
-        "\n",
-        "The expression on the left doesn't technically have to involve the loop variable (though it'd be pretty unusual for it not to). What do you think the expression below will evaluate to? Press the 'output' button to check.\n"
+        "次のプログラムはリスト内包表記の左部分にループ変数を含まない例である。\n"
       ]
     },
     {
@@ -505,7 +495,7 @@
         "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
         "[32 for planet in planets]"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,15 +518,58 @@
         "colab_type": "text"
       },
       "source": [
+        "リスト内包表記と`min`、`max`、`sum`などの関数を組み合わせるとリスト内包表記を使わなければ何行にもなるプログラムを一行で書くことができる場合がある。\n",
         "\n",
-        "```\n",
-        "[32 for planet in planets]\n",
-        "```\n",
-        "List comprehensions combined with functions like min, max, and sum can lead to impressive one-line solutions for problems that would otherwise require several lines of code.\n",
-        "\n",
-        "For example, compare the following two cells of code that do the same thing.\n",
+        "次の2つのコードセルは同じことをやっている。\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p4qXj01R4iyX",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6qnYlO2Q4Ro1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def count_negatives(nums):\n",
+        "    \"\"\"Return the number of negative numbers in the given list.\n",
+        "    \n",
+        "    >>> count_negatives([5, -1, -2, 0, 3])\n",
+        "    2\n",
+        "    \"\"\"\n",
+        "    n_negative = 0\n",
+        "    for num in nums:\n",
+        "        if num < 0:\n",
+        "            n_negative = n_negative + 1\n",
+        "    return n_negative"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HtZCwZ5d4Q1F",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def count_negatives(nums):\n",
+        "    return len([num for num in nums if num < 0])"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
