Colaboratory を使用して作成しました

--- a/kaggle06string.ipynb
+++ b/kaggle06string.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle06string.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNFbMsz9Q9IEGHl3Kz9twYf",
+      "authorship_tag": "ABX9TyNFunNSvgBL61ydLIQkkSwF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,11 +62,7 @@
         "\n",
         "Pythonは文字列の扱いが得意で、この章ではPythonに組み込まれている関数とフォーマット処理について述べる。\n",
         "\n",
-        "文字列操作はしばしば科学研究の文脈で\n",
-        "\n",
-        "One place where the Python language really shines is in the manipulation of strings. This section will cover some of Python's built-in string methods and formatting operations.\n",
-        "\n",
-        "Such string manipulation patterns come up often in the context of data science work, and is one big perk of Python in this context.\n"
+        "文字列操作はしばしば科学研究の文脈で使われ、Pythonの特典のひとつと言える。\n"
       ]
     },
     {
@@ -76,10 +72,9 @@
         "colab_type": "text"
       },
       "source": [
+        "### 文字列文法\n",
         "\n",
-        "### String syntax\n",
-        "\n",
-        "You've already seen plenty of strings in examples during the previous lessons, but just to recap, strings in Python can be defined using either single or double quotations. They are functionally equivalent.\n"
+        "復習になるが、Pythonの文字列はシングルクォートでもダブルクォートでも作ることができて、機能的に全く同じである。\n"
       ]
     },
     {
@@ -87,16 +82,32 @@
       "metadata": {
         "id": "_jcckYmDRysY",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c1b1d993-7b91-4626-9137-60378f998309"
       },
       "source": [
         "x = 'Pluto is a planet'\n",
         "y = \"Pluto is a planet\"\n",
-        "x == y\n",
-        "True"
+        "x == y"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -105,10 +116,7 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "Double quotes are convenient if your string contains a single quote character (e.g. representing an apostrophe).\n",
-        "\n",
-        "Similarly, it's easy to create a string that contains double-quotes if you wrap it in single quotes:\n"
+        "文字列がアポストロフィなどシングルクォートを含んでいる場合はダブルクォートが便利だし、逆にダブルクォートを含んでいる場合はシングルクォートが便利。\n"
       ]
     },
     {
@@ -116,16 +124,27 @@
       "metadata": {
         "id": "-DJ8dJPXR5dK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "04e31ffc-f867-406a-e7ec-9a529acceeb5"
       },
       "source": [
         "print(\"Pluto's a planet!\")\n",
-        "print('My dog is named \"Pluto\"')\n",
-        "Pluto's a planet!\n",
-        "My dog is named \"Pluto\""
+        "print('My dog is named \"Pluto\"')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Pluto's a planet!\n",
+            "My dog is named \"Pluto\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -134,26 +153,21 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "If we try to put a single quote character inside a single-quoted string, Python gets confused:\n"
+        "シングルクォートで囲んだ文字列の中にシングルクォートがあればエラーになる。\n"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
         "id": "quyLN7KQSDT_",
-        "colab_type": "text"
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
-        "\n",
-        "```\n",
-        "'Pluto's a planet!'\n",
-        "  File \"<ipython-input-3-a43631749f52>\", line 1\n",
-        "    'Pluto's a planet!'\n",
-        "           ^\n",
-        "SyntaxError: invalid syntax\n",
-        "```\n"
-      ]
+        "# 'Pluto's a planet!'"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -162,22 +176,40 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "We can fix this by \"escaping\" the single quote with a backslash.\n"
+        "このような場合、バックスラッシュでエスケープすることができる。\n"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
         "id": "9SS6QbnxSGrt",
-        "colab_type": "text"
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "70ad1a7f-b7be-4f4a-c717-5705e39a9f6a"
       },
       "source": [
-        "\n",
-        "```\n",
-        "'Pluto\\'s a planet!'\n",
-        "\"Pluto's a planet!\"\n",
-        "```\n"
+        "'Pluto\\'s a planet!'"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic": {
+              "type": "string"
+            },
+            "text/plain": [
+              "\"Pluto's a planet!\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
       ]
     },
     {
@@ -187,8 +219,17 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "The table below summarizes some important uses of the backslash character.\n"
+        "次の表はバックスラッシュの用法についてまとめたもの。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i1y6baW2oaB7",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -198,16 +239,13 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "```\n",
-        "What you type...\tWhat you get\texample\tprint(example)\n",
-        "\\'\t'\t'What\\'s up?'\tWhat's up?\n",
-        "\\\"\t\"\t\"That's \\\"cool\\\"\"\tThat's \"cool\"\n",
-        "\\\\\t\\\t\"Look, a mountain: /\\\\\"\tLook, a mountain: /\\\n",
-        "\\n\t\n",
-        "\"1\\n2 3\"\t1\n",
-        "2 3\n",
-        "```\n"
+        "| What you type... |\tWhat you get |\texample\t| print(example) |\n",
+        "| --- | --- | --- | --- |\n",
+        "|\\\\'  |\t'\t| 'What\\\\'s up?'\t| What's up? |\n",
+        "| \\\\\"  |\t\"\t| \"That's \\\\\"cool\\\\\"\\\" |\tThat's \"cool\" |\n",
+        "| \\\\\\  |\t\\\t| \"Look, a mountain: /\\\\\"\t| Look, a mountain: /\\ |\n",
+        "| \\\\n  |\t | \"1\\n2 3\" |\t1  |\n",
+        "|  |  | | 2 3 |\n"
       ]
     },
     {
@@ -217,24 +255,34 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "The last sequence, \\n, represents the newline character. It causes Python to start a new line.\n"
+        "表の最後の行の`\\n`は、改行文字を表し、Pythonでは改行して新しい行になる。\n"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
         "id": "PdE75B7cSQE0",
-        "colab_type": "text"
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "5b2056e6-e431-4867-8348-3deda7147011"
       },
       "source": [
-        "\n",
-        "```\n",
         "hello = \"hello\\nworld\"\n",
-        "print(hello)\n",
-        "hello\n",
-        "world\n",
-        "```\n"
+        "print(hello)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello\n",
+            "world\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
