Colaboratory を使用して作成しました

--- a/kaggle06string.ipynb
+++ b/kaggle06string.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle06string.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNFunNSvgBL61ydLIQkkSwF",
+      "authorship_tag": "ABX9TyNNw82NUoz90HIZPAfLo8cB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
         "y = \"Pluto is a planet\"\n",
         "x == y"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,7 +134,7 @@
         "print(\"Pluto's a planet!\")\n",
         "print('My dog is named \"Pluto\"')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
       "source": [
         "'Pluto\\'s a planet!'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +273,7 @@
         "hello = \"hello\\nworld\"\n",
         "print(hello)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,27 +292,50 @@
         "colab_type": "text"
       },
       "source": [
+        "さらにPythonの3重引用符は、｀Enter`による改行をうけつける。つまり、みたままの形で文字列を変数に入れることができる。すでに`docstring`で見てきているが、どこでもできる。\n",
         "\n",
         "In addition, Python's triple quote syntax for strings lets us include newlines literally (i.e. by just hitting 'Enter' on our keyboard, rather than using the special '\\n' sequence). We've already seen this in the docstrings we use to document our functions, but we can use them anywhere we want to define a string.\n"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
         "id": "dyGjStwaSUmi",
-        "colab_type": "text"
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "ca26c216-702d-43ab-8eef-038261dcbe9f"
       },
       "source": [
-        "\n",
-        "```\n",
         "triplequoted_hello = \"\"\"hello\n",
         "world\"\"\"\n",
         "print(triplequoted_hello)\n",
-        "triplequoted_hello == hello\n",
-        "hello\n",
-        "world\n",
-        "True\n",
-        "```\n"
+        "triplequoted_hello == 'hello\\nworld'"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello\n",
+            "world\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
       ]
     },
     {
